--- a/back/pom.xml
+++ b/back/pom.xml
@@ -73,6 +73,19 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
+
+<!--       swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
